--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         url: 'https://human-changelog-git-main-cold-briu.vercel.app/api/changelogs'
         method: 'POST'
         customHeaders: '{"Content-Type": "application/json"}'
-        data: '{ "name" : "release bby", "origin" : "fork", "version" : "0.99", "changelog" : "Go modular ⛽️" }'
+        data: '{ "name" : "${{ github.event.release.name }}", "origin" : "${{ github.event.repository }}", "version" : "${{ github.event.release.tag_name }}", "changelog" : "${{ github.event.release.body }}" }'
