try to escape line breaks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,13 @@ jobs:
   create-card:
     runs-on: ubuntu-latest
     steps:
+    - name: Create changelog body variable
+      run: echo "::set-env name=changelog_body::$(echo '${{ github.event.release.body }}' | tr '\n' '\\n')"
+      shell: bash
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
       with:
         url: 'https://human-changelog-git-main-cold-briu.vercel.app/api/changelogs'
         method: 'POST'
         customHeaders: '{"Content-Type": "application/json"}'
-        data: '{ "name" : "${{ github.event.release.name }}", "origin" : "${{ github.event.repository }}", "version" : "${{ github.event.release.tag_name }}", "changelog" : "${{ github.event.release.body }}" }'
+        data: '{ "name" : "${{ github.event.release.name }}", "origin" : "${{ github.event.repository }}", "version" : "${{ github.event.release.tag_name }}", "changelog" : "${{ changelog_body }}" }'
