--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Send human changelog to notion
+name: Upload Release Notes
 
 on:
   release:
@@ -14,4 +14,4 @@ jobs:
         url: 'https://human-changelog-git-main-cold-briu.vercel.app/api/changelogs'
         method: 'POST'
         customHeaders: '{"Content-Type": "application/json"}'
-        data: '{ "name" : "${{ github.event.release.name }}", "origin" : "${{ github.repository }}", "version" : "${{ github.event.release.tag_name }}", "changelog" : "wip body" }'
+        data: '{ "name" : "${{ github.event.release.name }}", "origin" : "${{ github.repository }}", "version" : "${{ github.event.release.tag_name }}", "changelog" : "${{ github.event.release.body }}" }'
