--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,5 @@ jobs:
               "origin" : "${{ github.repository }}", 
               "version" : "${{ github.event.release.tag_name }}", 
               "changelog" : "${{ github.event.release.body}}" 
+              "changelog" : "$(echo '${{ github.event.release.body}}' | sed 's/$/\\n/' | tr -d '\n')"
             }
