--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
   create-card:
     runs-on: ubuntu-latest
     steps:
+     steps:
+      - name: Parse release body
+        id: vars
+        run: echo "PARSED_RELEASE_BODY=$(echo "${{ github.event.release.body}}"" | sed 's/$/\\n/' | tr -d '\n') >> $GITHUB_ENV
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
       with:
@@ -20,5 +24,5 @@ jobs:
               "origin" : "${{ github.repository }}", 
               "version" : "${{ github.event.release.tag_name }}", 
               "changelog" : "${{ github.event.release.body}}" 
-              "changelog" : $(echo "${{ github.event.release.body}}"" | sed 's/$/\\n/' | tr -d '\n')
+              "changelog" : "${{ env.PARSED_RELEASE_BODY }}"
             }
