--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Parse release body
-      shel: bash
+      shell: bash
       run: echo "PARSED_RELEASE_BODY=$(echo '${{ github.event.release.body }}' | tr -d '\n'' )" >> $GITHUB_ENV
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
