--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ jobs:
   create-card:
     runs-on: ubuntu-latest
     steps:
-    - name: Parse release body
+    
+    - name: Lint notes
       shell: bash
-      
-      run: echo "PARSED_RELEASE_BODY=$(echo '${{ github.event.release.body }}' | sed 's/$/\\n/' | tr -d '\n' )" >> $GITHUB_ENV
+      run: echo "RELEASE_NOTES=$(echo ./.github/workflows/scripts/lint-changelog.sh ${{ github.event.release.body }})" >> $GITHUB_ENV
+
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
       with:
@@ -23,5 +24,5 @@ jobs:
               "name" : "${{ github.event.release.name }}", 
               "origin" : "${{ github.repository }}", 
               "version" : "${{ github.event.release.tag_name }}", 
-              "changelog" : "${{ env.PARSED_RELEASE_BODY }}"
+              "changelog" : "${{ env.RELEASE_NOTES }}"
             }
