--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     
     - name: Lint notes
       shell: bash
-      run: echo "RELEASE_NOTES=$(./.github/workflows/scripts/lint-changelog.sh '${{ github.event.release.body }}')" >> $GITHUB_ENV
+      run: echo "RELEASE_NOTES=$(${GITHUB_WORKSPACE}/.github/workflows/scripts/lint-changelog.sh '${{ github.event.release.body }}')" >> $GITHUB_ENV
 
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
@@ -24,5 +24,5 @@ jobs:
               "name" : "${{ github.event.release.name }}", 
               "origin" : "${{ github.repository }}", 
               "version" : "${{ github.event.release.tag_name }}", 
-              "changelog" : "${{ env.RELEASE_NOTES }}"
+              "changelog" : "${{ env.RELEASE_NOTES || 'MISSING_NOTES' }}"
             }
