feat: fixed script path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     
     - name: Lint notes
       shell: bash
-      run: echo "RELEASE_NOTES=$(${GITHUB_WORKSPACE}/.github/workflows/scripts/lint-changelog.sh '${{ github.event.release.body }}')" >> $GITHUB_ENV
+      run: echo "RELEASE_NOTES=$(./scripts/lint-changelog.sh '${{ github.event.release.body }}')" >> $GITHUB_ENV
 
     - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
