--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Lint notes
       shell: bash
-      run: echo "RELEASE_NOTES=$(./.github/workflows/scripts/lint-changelog.sh '${{ github.event.release.body }}')" >> $GITHUB_ENV
+      run: echo "RELEASE_NOTES=$(bash ./.github/workflows/scripts/lint-changelog.sh '${{ github.event.release.body }}')" >> $GITHUB_ENV
 
 
     - name: Deploy Stage
