--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Remove line breaks
-      run: echo "PARSED_RELEASE_BODY=$(echo ${ github.event.release.body} | sed 's/$/\\n/' | tr -d '\n')" >> $GITHUB_ENV
+      run: echo "PARSED_RELEASE_BODY=$(echo '${{ github.event.release.body }}' | sed 's/$/\\n/' | tr -d '\n' )" >> $GITHUB_ENV
+
 
 
     - name: Lint notes
