feat: panic workflow on lint notes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,15 @@ jobs:
     - name: Remove line breaks
       run: echo "PARSED_RELEASE_BODY=$(echo '${{ github.event.release.body }}' | sed 's/$/\\n/' | tr -d '\n' )" >> $GITHUB_ENV
 
-
-
     - name: Lint notes
       shell: bash
-      run: echo "RELEASE_NOTES=$(bash ./.github/workflows/scripts/lint-changelog.sh '${{ env.PARSED_RELEASE_BODY }}')" >> $GITHUB_ENV
+            run: |
+              RELEASE_NOTES=$(bash ./.github/workflows/scripts/lint-changelog.sh '${{ env.PARSED_RELEASE_BODY }}')
+              if [ $? -ne 0 ]; then
+                echo "$RELEASE_NOTES"
+                exit 1
+              fi
+              echo "RELEASE_NOTES=$RELEASE_NOTES" >> $GITHUB_ENV
 
 
     - name: Deploy Stage
