feat: modified req string

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,10 @@ jobs:
         customHeaders: '{"Content-Type": "application/json"}'
         data: >-
             { 
-              "name" : "${{ github.event.release.name }}", 
-              "origin" : "${{ github.repository }}", 
-              "version" : "${{ github.event.release.tag_name }}", 
-              "changelog" : "${{ env.RELEASE_NOTES || 'MISSING_NOTES' }}",
-              "date" : "${{ github.event.release.published_at }}",
-              "release_url" : "${{ github.event.release.url }}",
+              'name' : '${{ github.event.release.name }}',
+              'origin' : '${{ github.repository }}',
+              'version' : '${{ github.event.release.tag_name }}',
+              'changelog' : '${{ env.RELEASE_NOTES || 'MISSING_NOTES' }}',
+              'date' : '${{ github.event.release.published_at }}',
+              'release_url' : '${{ github.event.release.url }}',
             }
