--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         echo "RELEASE_NOTES=$RELEASE_NOTES" >> $GITHUB_ENV
 
 
-    - name: Upload notes
+    - name: Deploy Stage
       uses: fjogeleit/http-request-action@v1
       with:
         url: 'https://human-changelog-git-main-cold-briu.vercel.app/api/changelogs'
@@ -37,7 +37,5 @@ jobs:
               "name" : "${{ github.event.release.name }}", 
               "origin" : "${{ github.repository }}", 
               "version" : "${{ github.event.release.tag_name }}", 
-              "changelog" : "${{ env.RELEASE_NOTES || 'MISSING_NOTES' }}",
-              "date" : "${{ github.event.release.published_at }}",
-              "url" : "${{ github.event.release.html_url }}
+              "changelog" : "${{ env.RELEASE_NOTES || 'MISSING_NOTES' }}"
             }
