--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,6 @@ jobs:
               "origin" : "${{ github.repository }}", 
               "version" : "${{ github.event.release.tag_name }}", 
               "changelog" : "${{ env.RELEASE_NOTES || 'MISSING_NOTES' }}",
-              "date" : "${{ github.event.release.published_at }}"
+              "date" : "${{ github.event.release.published_at }}",
+              "url" : "${{ github.event.release.html_url }}"
             }
